# roboy_matrix

./: .gitmodules  README.md
src/roboy_cognition_manager/launch/: bot.launch  pi.launch  roboy-no-recog.launch  roboy.launch
src/roboy_matrix_utils/: README.md
src/roboy_matrix_utils/led_control/: CMakeLists.txt  package.xml
src/roboy_matrix_utils/led_control/src/: leds.py
src/roboy_speech_synthesis/: README.md
src/roboy_speech_synthesis/speech_synthesis/: CMakeLists.txt  package.xml
src/roboy_speech_synthesis/speech_synthesis/launch/: speech_synthesis.launch
src/roboy_speech_synthesis/speech_synthesis/scripts/: tts_server.py
src/roboy_speech_synthesis/speech_synthesis/yaml/: speech_synthesis.yaml
